# pairs-trading-kalman

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_pair_selection.ipynb  02_ols_baseline.ipynb  03_kalman_hedge.ipynb  04_trading_rules.ipynb  05_rolling_ols_hedge.ipynb  06_results.ipynb
src/pairs_trading/: config.py
src/pairs_trading/backtest/: engine.py  metrics.py
src/pairs_trading/data/: loaders.py
src/pairs_trading/models/: kalman_hedge.py  ols_hedge.py  rolling_ols_hedge.py
src/pairs_trading/signals/: zscore.py
src/pairs_trading/stats/: cointegration.py  garch.py  stationarity.py
tests/: test_backtest.py  test_cointegration.py  test_garch.py  test_kalman_hedge.py  test_loaders.py  test_ols_hedge.py  test_smoke.py
