[project]
name = "pairs-trading-kalman"
version = "0.1.0"
description = "Pairs trading with Kalman-filtered dynamic hedge ratios"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "arch>=6.3",
    "yfinance>=0.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "pyarrow>=14.0.0",
    "ipykernel>=6.0"
]

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"pytest-cov>=5.0",
"ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pairs_trading"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

